<?xml version="1.0"?>
<package format="2">
  <name>mission_planner</name>
  <version>0.1.0</version>
  <description>The mission_planner package</description>

  <maintainer email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lanelet2_routing</depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- 确保 std_msgs 依赖项也存在 -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
